<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.se491.chef_ly.activity.MainActivity">

    <TextView
        android:text="@string/app_name"
        android:textSize="60sp"
        android:textColor="@color/black"
        android:textStyle="bold|italic"
        android:fontFamily="cursive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/forgotpassword"
        android:layout_marginEnd="12dp" />

    <ImageView
        android:src="@drawable/chefly"
        android:scaleType="fitCenter"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignTop="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:id="@+id/imageView2" />


    <EditText
        android:id="@+id/useremail"
        android:inputType="textAutoComplete"
        android:hint="@string/useremail"
        android:textColorHint="@color/lightGray"
        android:textAlignment="center"
        android:background="@drawable/newstyle"
        android:textSize="20sp"
        android:layout_marginTop="29dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/lightGray"
        android:textAlignment="center"
        android:textSize="20sp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/newstyle"
        android:layout_below="@+id/useremail"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp" />

    <Button
        android:id="@+id/signInBtn"
        android:text="@string/signIn"
        android:textColor="@color/white"
        android:background="@color/btnBlack"
        android:paddingEnd="100dp"
        android:paddingStart="100dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_below="@+id/password"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


        <TextView
            android:id="@+id/continueAsGuest"
            android:text="@string/continueAsGuest"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textColorHighlight="#EF33BB"
            android:clickable="true"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/forgotpassword"
            android:text="@string/forgotpassword"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/signInBtn"
            android:layout_alignParentEnd="true" />

    <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:padding="5dp"
            android:text="@string/signUp"
            android:textColor="@color/black"
            android:textColorHighlight="#EF33BB"
            android:textSize="15sp"
            android:layout_alignBaseline="@+id/forgotpassword"
            android:layout_alignBottom="@+id/forgotpassword"
            android:layout_alignParentStart="true" />

    <TextView
        android:textSize="@dimen/text_medium"
        android:text="@string/continueWithSocial"
        android:layout_below="@id/forgotpassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_below="@id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/webLoginButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginEnd="50dp"
            android:textAlignment="center"
            android:background="@drawable/fbbw"/>
        <ImageButton
            android:id="@+id/googleLoginButton"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:textAlignment="center"
            android:text="@string/googleLogin"
            android:background="@drawable/googlebw"/>
    </LinearLayout>

</RelativeLayout>
