<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.se491.chef_ly.activity.ListViewFragment">

    <ListView
        android:id="@+id/list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ImageView
        android:contentDescription="@string/noFavorites"
        android:id="@+id/emptyList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</FrameLayout>
