...
    <string name="bonAppetit">Bon Appetit!</string>
    <string name="by">by </string>
    <string name="categoryHint">Italian, French, Dessert, Lunch, Quick, &#8230;</string>
    <string name="chooseUsername">Create a new username:\n*must be between 4 to 20 characters</string>
    <string name="clearPurchased">Clear Purchased</string>
    <string name="contentDescriptionRecipe">A picture of the recipe</string>
    <string name="continueAsGuest"><u>Skip</u></string>
    <string name="contactus"><u>Contact Us:</u></string>
    <string name="webtext"><u>Please provide our feedback to our survey: https://chef-ly.typeform.com/to/LKXdL8</u></string>
    <string name="emailtext"><u>To report an issue or communicate with as, please send an email to: chef.ly.app@gmail.com</u></string>
    <string name="continueWithSocial">Continue with social</string>
    <string name="createPassword">Create a new Password:\n * Must have 8 characters in length\n *At least one digit,symbol,Lower/Upper case letter\n</string>
    <string name="createPasswordAgain">Please Re-enter password for match confirmation</string>
...
    <string name="recipeTime">Cook and Prep Time</string>
    <string name="registerPageTitle">Register</string>
    <string name="repeat">Repeat</string>
    <string name="search">Search</string>
    <string name="searchHint">Search&#8230;</string>
    <string name="shoppingList">Shopping List</string>
    <string name="signIn">Login</string>
    <string name="signUp"><u>Join for free</u></string>
    <string name="skip">Skip</string>
    <string name="forgotpassword"><u>Forgot Password?</u></string>
    <string name="step">Step</string>
    <string name="time">Time</string>
    <string name="unit">Unit</string>
...
